<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="16dp"
    android:paddingBottom="16dp"
    android:paddingRight="16dp"
    android:paddingLeft="16dp"
    android:gravity="start">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_checking_account_title"
        android:textSize="30sp"
        android:paddingBottom="30dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checking_account_name_title"
        android:labelFor="@id/checking_account_name"/>

    <EditText
        android:id="@+id/checking_account_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checking_account_date_opened_title"
        android:labelFor="@id/checking_account_date_opened"/>

    <EditText
        android:id="@+id/checking_account_date_opened"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="date"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checking_account_value_title"
        android:labelFor="@id/checking_account_value"/>

    <EditText
        android:id="@+id/checking_account_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checking_account_interest_rate_title"
        android:labelFor="@id/checking_account_interest_rate"/>

    <EditText
        android:id="@+id/checking_account_interest_rate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"/>

    <Button
        android:id="@+id/checking_account_save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checking_account_save_button_text"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"/>


</LinearLayout>